--- a/package.json
+++ b/package.json
@@ -5,17 +5,26 @@
   "dependencies": {
     "@material-ui/core": "^4.5.2",
     "@material-ui/icons": "^4.5.1",
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
     "connected-react-router": "^6.3.2",
     "history": "^4.10.1",
     "immutable": "^4.0.0-rc.12",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.27",
+    "prop-types": "^15.7.2",
+    "rc-time-picker": "^3.7.2",
     "react": "^16.11.0",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
+    "react-grid-layout": "^0.17.1",
     "react-redux": "^7.1.1",
     "react-router": "^5.0.0",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "sweetalert": "^2.1.2",
+    "use-debounce": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
