--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "rc-time-picker": "^3.7.2",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
+    "react-color": "^2.17.3",
     "react-dom": "^16.11.0",
     "react-grid-layout": "^0.17.1",
     "react-redux": "^7.1.1",
@@ -24,7 +25,8 @@
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "sweetalert": "^2.1.2",
-    "use-debounce": "^3.1.0"
+    "use-debounce": "^3.1.0",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
