--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "calendar",
   "version": "0.1.0",
+  "homepage":"http://pinkfloyd92.github.io/ReactCalendar",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.5.2",
@@ -29,6 +30,8 @@
     "uuid": "^3.3.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -54,12 +57,13 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "enzyme-to-json": "^3.4.3",
-    "jest": "^24.9.0",
-    "redux-devtools": "^3.5.0",
     "eslint": "5.3.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.0"
+    "eslint-plugin-react": "^7.11.0",
+    "gh-pages": "^2.1.1",
+    "jest": "^24.9.0",
+    "redux-devtools": "^3.5.0"
   }
 }
